feat: added translations and sitemap

--- a/src/content/translations/ru/components/head.yaml
+++ b/src/content/translations/ru/components/head.yaml
@@ -1,2 +1,4 @@
 title: '%s • Мини-кондитерская "Irena"'
 fallback: Домашние кондитерские изделия
+
+description: Откройте для себя лучшие домашние кондитерские изделия из натуральных и отечественных продуктов в волости Ляэне-Харью и городе Палдиски
