fix(works): added missing OG and meta translations

--- a/src/content/translations/et/components/product/og.yaml
+++ b/src/content/translations/et/components/product/og.yaml
@@ -1,4 +1,4 @@
 ogCategoryTitle: '{categoryName}: vaata rohkem isetehtud kondiitritooteid mini-kondiitriärilt'
-ogProductTitle: '{productName}: ülevaade, hind ja kuidas tellida. Vaata isetehtud maiustusi mini-kondiitriärilt "Irena"'
+ogProductTitle: 'Osta {productName}: ülevaade, koostiosad, hind ja kuidas tellida. Vaata isetehtud maiustusi mini-kondiitriärilt "Irena"'
 
 ogImageAlt: Pilt, millel on kujutatud toodet kategooriast '{categoryName}', selle kategooria nimi ja mini-kondiitriärilt "Irena" logo
