--- a/src/content/translations/et/components/product/page.yaml
+++ b/src/content/translations/et/components/product/page.yaml
@@ -1,3 +1,5 @@
 information: Tooteinfo
 composition: Koostiosad
 notes: Märkmeid
+
+description: Tutvuge selle ja veelgi rohkema isetehtud kondiitritoodetega mini-kondiitriärilt "Irena"
