--- a/src/content/translations/ru/components/product/og.yaml
+++ b/src/content/translations/ru/components/product/og.yaml
@@ -1,4 +1,4 @@
 ogCategoryTitle: '{categoryName}: смотрите больше домашних кондитерских изделий от мини-кондитерской "Irena"'
-ogProductTitle: '{productName}: обзор, цена и как заказать. Смотрите домашние кондитерские изделия от мини-кондитерской "Irena"'
+ogProductTitle: 'Купить {productName}: обзор, состав, цена и как заказать. Смотрите домашние кондитерские изделия от мини-кондитерской "Irena"'
 
 ogImageAlt: Картинка с изображением товара из категории '{categoryName}', названием данной категории и логотипом мини-кондитерской "Irena"
