--- a/src/content/translations/ru/components/product/page.yaml
+++ b/src/content/translations/ru/components/product/page.yaml
@@ -1,3 +1,5 @@
 information: Информация о продукте
 composition: Состав
 notes: Примечания
+
+description: Познакомитесь с этим и другими кондитерскими изделиями от мини-кондитерской "Irena"
