--- a/src/content/translations/ru/components/marketing/order.yaml
+++ b/src/content/translations/ru/components/marketing/order.yaml
@@ -9,3 +9,10 @@ contactCta: используя наши контакты
 
 orderTitle: Сделайте заказ
 orderDescription: Обсудите все нюансы вашего заказа, начиная от веса, и заканчивая оформлением продукта
+
+note: Обратите внимание!
+noteMessage: Оформление заказа не менее чем за %1 до желаемой даты получения товара.
+days:
+  one: '{count} день'
+  few: '{count} дня'
+  many: '{count} дней'
